--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client-jre7', version: '1.6.1'
+	compile group: 'org.springframework', name: 'spring-jms', version: '5.2.6.RELEASE'
+	compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -45,7 +50,7 @@ test {
 
 bootJar {
 	baseName = 'aws_project01'
-	version = '0.2.0'
+	version = '0.3.0'
 }
 
 task unpack(type: Copy) {
